[project]
name = "Ludex"
version = "0.2.0"
description = "Game databases, tables, and grids for whatever game I happen to be obssessed with."
#authors = ["Test <w/e@example.com>"]
license = {text = "MIT"}

# runtime dependencies
dependencies = [
    "dash-ag-grid==33.3.3",
    "dash-bootstrap-components==2.0.4",
    "dash-iconify==0.1.2",
    "dash-mantine-components==2.6.0",
    "dash==4.0.0",
    "gunicorn==25.1.0",
    "pandas==3.0.1",
    "loguru>=0.7.3",
]
